# fitapp_aayush

./: .env  README.md  pyproject.toml
data/: Fitapp
fitapp_aayush/: analysis.ipynb  dataset_reader.py  pyvenv.cfg  user4.csv  user5.csv
fitapp_aayush/include/: user4.csv
